tests/graph_styles/snapshots/integration__graph_styles__test_braille_columns_2_line.snap
---
source: tests/graph_styles/mod.rs
expression: stdout
---
⠀⠀⡐⠉⠄⠀⠀⠀⠀⠀⠀⠠⠉⠑⣀⠊⠡⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠠⠀⠀⠈⠀⠀⠀⠀⠀⠠⠁⠀⠀⡠⠀⠀⢁⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠄⠀⠀⠀⠁⠀⠀⠀⠀⠂⠀⠀⢀⠀⠂⠀⠀⡀⠀⠀⠀⠀⠀⠀⠀
⢂⠀⠀⠀⠀⠈⠀⠀⠀⠐⠀⠀⠀⡀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄
⡐⠀⠀⠀⠀⠀⠂⠀⠀⠂⠀⠀⠀⠀⠀⠀⠁⠀⠈⠀⠀⠀⠀⠀⠠⠀
⠀⠂⠀⠀⠀⠀⠠⠀⠐⠀⠀⠀⠈⠀⠀⠀⠈⡀⠀⠂⠀⠀⠀⠀⠄⠂
⠀⠐⠀⠀⠀⠀⠀⠄⠁⠀⠀⠀⠂⠀⠀⠀⠀⢀⠀⠠⠀⠀⠀⠠⠠⠀
⠀⠀⠂⠀⠀⠀⠀⣈⠀⠀⠀⠐⠀⠀⠀⠀⠀⠀⡀⠀⠄⠀⠀⠄⠄⠀
⠀⠀⠈⡀⠀⠀⠠⠀⠄⠀⠀⠂⠀⠀⠀⠀⠀⠀⠠⠀⠠⠀⡐⠠⠀⠀
⠀⠀⠀⠐⢄⡠⠁⠀⠐⣀⠌⠀⠀⠀⠀⠀⠀⠀⠀⠡⣀⠶⡠⠂⠀⠀

