tests/graph_styles/snapshots/integration__graph_styles__test_mini_bars_1_auto.snap
---
source: tests/graph_styles/mod.rs
expression: stdout
---
    ▐█▘
   ▗▝
 ▗▝ 
▗▘  
▌   
▌   
▝▖  
  ▚ 
   ▝▗
    ▐█▄
    ▐██▙▖
    ▐████▖
    ▐█████
    ▐████▛
    ▐███▛
    ▐██▀
    ▐▀
   ▖▘
 ▗▘ 
▐   
▌   
▚   
 ▚  
  ▝▖
    ▚▖
    ▝▀▘

